ajout de la photo du film

--- a/src/app/film/film.component.html
+++ b/src/app/film/film.component.html
@@ -1,3 +1,9 @@
 <p>
-  film works!
+  tototototototto
 </p>
+
+
+<section *ngIf="movie">
+  <img [src]="getPath(movie.poster_path)" />
+  <!--<pre>{{movie | json}}</pre>-->
+</section>
