--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,29 @@
-<h1>TMDB + Firebase</h1>
-<nav *ngIf="user">
-  <label>{{user.displayName}}</label>
-  <img [src]="user.photoURL" />
-  <button (click)="logout()">Déconnection</button>
-  {{user.uid}}
-</nav>
-<nav *ngIf="!user">
-  <button (click)="login()">Connection via Google</button>
-</nav>
+<!--<h1>TMDB + Firebase</h1>-->
+<!--<nav *ngIf="user">-->
+  <!--<label>{{user.displayName}}</label>-->
+  <!--<img [src]="user.photoURL" />-->
+  <!--<button (click)="logout()">Déconnection</button>-->
+  <!--{{user.uid}}-->
+<!--</nav>-->
+<!--<nav *ngIf="!user">-->
+  <!--<button (click)="login()">Connection via Google</button>-->
+<!--</nav>-->
 
-<hr/>
-<pre *ngIf="lists">
-  {{lists | async | json}}
-</pre>
+<!--<hr/>-->
+<!--<pre *ngIf="lists">-->
+  <!--{{lists | async | json}}-->
+<!--</pre>-->
 
-<hr/>
-<section *ngIf="movie">
-  <img [src]="getPath(movie.poster_path)" />
-  <pre>{{movie | json}}</pre>
-</section>
-<section *ngIf="!movie">
-  Pas encore de films à afficher...
-</section>
+<!--<hr/>-->
+<!--<section *ngIf="movie">-->
+  <!--<img [src]="getPath(movie.poster_path)" />-->
+  <!--<pre>{{movie | json}}</pre>-->
+<!--</section>-->
+<!--<section *ngIf="!movie">-->
+  <!--Pas encore de films à afficher...-->
+<!--</section>-->
+
+
+<app-film
+  [id]="11"></app-film>
 
