new component dropdown list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>TMDB + Firebase</h1>
+<!--<h1>TMDB + Firebase</h1>
 <nav *ngIf="user">
   <label>{{user.displayName}}</label>
   <img [src]="user.photoURL" />
@@ -21,5 +21,8 @@
 </section>
 <section *ngIf="!movie">
   Pas encore de films à afficher...
-</section>
+</section>-->
 
+<section>
+  <app-dropdown-list></app-dropdown-list>
+</section>
