--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,5 +24,6 @@
 </section>-->
 
 <section>
-  <app-dropdown-list></app-dropdown-list>
+  <app-dropdown-list [playlists]=names>
+  </app-dropdown-list>
 </section>
