--- a/src/app/dropdown-list/dropdown-list.component.html
+++ b/src/app/dropdown-list/dropdown-list.component.html
@@ -1,3 +1,12 @@
 <p>
-  dropdown-list works!
+  okok
+  {{getPlaylists()}}
+  {{playlists}}
 </p>
+
+<p>Elément sélectionné : ok {{item}}</p>
+<label>
+  <select>
+    <option *ngFor="let item of playlists" value="{{item}}">{{item}}</option>
+  </select>
+</label>
