--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 
+<app-film id="12" type="petit" ></app-film>
 
-<app-film
-  [id]="11"></app-film>
+<app-film id="11" type="medium"></app-film>
 
