add playlistMenu addComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header-menu></app-header-menu>
-<app-small-card></app-small-card>
+<router-outlet></router-outlet>
+
+
+<!--
 <h1>TMDB + Firebase</h1>
 <nav *ngIf="user">
   <label>{{user.displayName}}</label>
@@ -24,4 +26,4 @@
 <section *ngIf="!movie">
   Pas encore de films à afficher...
 </section>
-
+-->
