--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,3 +28,7 @@
 <app-film id="11" type="medium"></app-film>
 
 <app-film id="14" type="big"></app-film>
+
+<app-film id="15" type="playlist"></app-film>
+
+<!--<app-film id="15" type="medium"></app-film>-->
