--- a/src/app/film/film.component.css
+++ b/src/app/film/film.component.css
@@ -85,6 +85,15 @@
 
 }
 
+.medium-button{
+  font-weight: bold;
+  font-size: 1rem;
+  border: none;
+  background: none;
+  float: right;
+
+}
+
 /*!*part general*!*/
 .name {
   font-weight: bold;
@@ -213,6 +222,147 @@
   width: 10rem;
   height: 3rem;
   text-align: center;
-  ;
+  float: right;
 
 }
+
+
+
+/*parti playlist photo*/
+.time-playlist {
+  /*font-size: 1.5em;*/
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.playlist {
+  width: 30rem;
+  /*display: block;*/
+
+  /*display: -webkit-inline-box;*/
+}
+
+.img-detail-playlist{
+  margin: 10px 10px 10px 10px;
+  -webkit-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
+  box-shadow: 0px 10px 49px -24px rgba(0,0,0,0.75);
+  border-radius: 0 0 0 0;
+  border: none;
+  display: -webkit-inline-box;
+}
+
+.detail-playlist{
+  /*display: inherit;*/
+  display: block;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.img-playlist{
+  width : 10rem;
+  /*height: 8rem;*/
+  /*background-size: cover;*/
+}
+.body-playlist {
+  padding-left: 2rem;
+  font-size: 1rem;
+  /*width: 80%;*/
+  padding-right: 2rem;
+  /*margin-left: 0.7rem;*/
+
+}
+
+.title-playlist {
+  font-weight: bold;
+  padding-top: 0.5rem;
+  /*font-size: ;*/
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.text-playlist {
+  margin-top: 0px;
+  color: grey;
+  margin-bottom: 0;
+  font-size: 1rem;
+  /*white-space: nowrap;*/
+  /*text-overflow: ellipsis;*/
+  /*overflow: hidden;*/
+
+}
+
+.img-playlist ~ * {
+  font-size: 1.6rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.title-playlist + p {
+  padding-top: 0.5rem;
+}
+
+.btn-playlist{
+  width: 10rem;
+  height: 3rem;
+  text-align: center;
+  float: right;
+
+}
+
+
+
+/*part little mat angular componenet*/
+
+.img-little{
+  width: 126%;
+  margin-bottom: 0.5rem;
+}
+
+.little {
+  width : 10%;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+
+}
+
+.title-little {
+  font-weight: bold;
+  font-size: 120%;
+  margin-bottom: 0px;
+  padding-top: 0px;
+}
+
+.content-little{
+  /*margin-top: 0px;*/
+  color: grey;
+  /*margin-bottom: 0;*/
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+/*part medium mat angular component*/
+
+.card-medium{
+  width: 40%;
+  margin-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  display: -webkit-box;
+
+}
+
+.card-img-medium{
+  width: 30%;
+  margin-right: 0px;
+  padding-left: 0px;
+
+}
+
+.card-body-medium {
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
