--- a/src/app/header-menu/header-menu.component.css
+++ b/src/app/header-menu/header-menu.component.css
@@ -20,12 +20,12 @@ h1 {
 }
 .search {
   min-width: 50%;
-
 }
 .search-input {
   width: 41%;
   left: 0;
   display: inline-block;
+  border-radius: 0 0 0 0;
 }
 .search-button{
   background-color: rgb(209, 33, 97);
