--- a/src/app/handle-film/handle-film.component.css
+++ b/src/app/handle-film/handle-film.component.css
@@ -1,19 +1,9 @@
-.container-fluid {
+.colonne {
+  width: 212px;
   -webkit-box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.75);
-  margin: 10px 0 0 10px;
   background-color: white;
-}
-.colonne {
-  width: 200px;
-
-}
-.form-control {
-  margin-left: 10px;
-  margin-right: 10px;
-  border-radius: 0;
-  width: 190px;
 }
 button {
   margin:  6px 0 6px 5px;
@@ -23,19 +13,21 @@ button {
   font-weight: bold;
   width: 70px;
   text-align: center;
-  height: 29px;
 }
-.supprimer {
-  display: inline-block;
-  background-color: rgb(209, 33, 97);
-  border: none;
-  color: white;
+label {
+  font-weight: bold;
+  margin-left: 5px;
 }
 .annuler {
   color: black;
   background-color: rgb(224, 224, 224);
 }
-label {
-  font-weight: bold;
-  margin-left: 5px;
+.buttons {
+  margin: 3px 10px 0 0;
+}
+.form-control {
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 0;
+  width: 190px;
 }
