--- a/src/app/playslist-menu/playslist-menu.component.css
+++ b/src/app/playslist-menu/playslist-menu.component.css
@@ -62,6 +62,15 @@ button {
   top: 36%;
   right: calc(85% - 212px);
 }
+.removePopUp {
+  z-index: 2;
+  position: absolute;
+  top: 36%;
+  right: calc(85% - 212px);
+}
+#select {
+  margin: 0 10px 0 10px;
+}
 /*
 .colonne > .row {
   margin-top: 10px;
