--- a/src/app/playslist-menu/playslist-menu.component.html
+++ b/src/app/playslist-menu/playslist-menu.component.html
@@ -18,7 +18,7 @@
       </div>
 
       <app-playlist *ngFor="let playlist of playlists; let i = index"
-                    [playlistName]="playlist.name"
+                    [playlistName]="playlist.getName()"
                     [index]="i">
       </app-playlist>
 
@@ -31,7 +31,7 @@
       </div>
 
       <div class="row">
-        <button class="icon"><i class="fa fa-minus-circle"></i><h1>Supprimer une playlist</h1></button>
+        <button class="icon" (click)="handleDel()"><i class="fa fa-minus-circle"></i><h1>Supprimer une playlist</h1></button>
       </div>
 
       <!--
@@ -39,6 +39,8 @@
       -->
     </div>
     <app-add-playlist class="addPopUp" *ngIf="add"></app-add-playlist>
+
+    <app-remove-playlist class="removePopUp" *ngIf="remove"></app-remove-playlist>
     <div class="filtre">
     </div>
 
