mise a jour playlist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,6 @@
 
 <app-film id="14" type="big"></app-film>
 
-<app-film id="15" type="playlist"></app-film>
+<app-film id="15" type="playlist" [nbFilm]="4" nameplaylist="toto"></app-film>
 
 <!--<app-film id="15" type="medium"></app-film>-->
