mise a jour playlist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,14 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 
-<app-film id="12" type="petit" ></app-film>
+<!--<app-film id="12" type="petit" ></app-film>-->
 
-<app-film id="11" type="medium"></app-film>
+<!--<app-film id="11" type="medium"></app-film>-->
 
-<app-film id="14" type="big"></app-film>
+<!--<app-film id="14" type="big"></app-film>-->
 
-<app-film id="15" type="playlist"></app-film>
+<!--<app-film id="15" type="playlist"></app-film>-->
 
 <!--<app-film id="15" type="medium"></app-film>-->
+
+<app-bandeau-result-search></app-bandeau-result-search>
