--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,4 +33,8 @@
 
 <!--<app-film id="15" type="medium"></app-film>-->
 
-<app-bandeau-result-search></app-bandeau-result-search>
+<!--<app-bandeau-result-search></app-bandeau-result-search>-->
+
+<app-bandeau-advanced-scearch></app-bandeau-advanced-scearch>
+
+
