--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
 
 <app-film id="15" type="playlist" [nbFilm]="4" nameplaylist="toto"></app-film>
 
-<!--<app-film id="15" type="medium"></app-film>-->
+<!--<app-film id="15" type="medium"></app-film>
 <hr/>
 <section *ngIf="movie">
   <img [src]="getPath(movie.poster_path)" />
