--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,7 @@
-<!--<h1>TMDB + Firebase</h1>-->
-<!--<nav *ngIf="user">-->
-  <!--<label>{{user.displayName}}</label>-->
-  <!--<img [src]="user.photoURL" />-->
-  <!--<button (click)="logout()">Déconnection</button>-->
-  <!--{{user.uid}}-->
-<!--</nav>-->
-<!--<nav *ngIf="!user">-->
-  <!--<button (click)="login()">Connection via Google</button>-->
-<!--</nav>-->
-
-<!--<hr/>-->
-<!--<pre *ngIf="lists">-->
-  <!--{{lists | async | json}}-->
-<!--</pre>-->
-
-<!--<hr/>-->
-<!--<section *ngIf="movie">-->
-  <!--<img [src]="getPath(movie.poster_path)" />-->
-  <!--<pre>{{movie | json}}</pre>-->
-<!--</section>-->
-<!--<section *ngIf="!movie">-->
-  <!--Pas encore de films à afficher...-->
-<!--</section>-->
 <router-outlet></router-outlet>
+<!--
 <app-film id="12" type="petit" ></app-film>
-
-
+-->
 <!--
 <h1>TMDB + Firebase</h1>
 <nav *ngIf="user">
@@ -38,13 +14,11 @@
   <button (click)="login()">Connection via Google</button>
 </nav>
 
-<app-film id="11" type="medium"></app-film>
+<hr/>
+<pre *ngIf="lists">
+  {{lists | async | json}}
+</pre>
 
-<app-film id="14" type="big"></app-film>
-
-<app-film id="15" type="playlist" [nbFilm]="4" nameplaylist="toto"></app-film>
-
-<!--<app-film id="15" type="medium"></app-film>-->
 <hr/>
 <section *ngIf="movie">
   <img [src]="getPath(movie.poster_path)" />
