--- a/src/app/header-menu/header-menu.component.css
+++ b/src/app/header-menu/header-menu.component.css
@@ -63,6 +63,13 @@ a {
 a, button {
   outline: 0;
 }
+.menuHandler {
+  height: 100%;
+  width: 10px;
+  position: fixed;
+  z-index: 1;
+}
+
 /*
 [class*="col-"], footer {
   background-color: lightblue;
