--- a/src/app/leo-card/leo-card.component.html
+++ b/src/app/leo-card/leo-card.component.html
@@ -1,8 +1,10 @@
 <div *ngIf="movie" class="card type1" style="width: 8rem;">
-  <img class="card-img-top img-responsive" [src]="getPath(path)" [alt]="title">
+  <img style="height: 10rem;" class="card-img-top img-responsive" [src]="getPath(path)" [alt]="title">
   <div class="card-body">
     <p class="card-title">{{title}}</p>
     <p class="card-text">{{description}}</p>
   </div>
 </div>
+<!--
 <h1 *ngIf="!movie">Pas de résultat</h1>
+-->
