--- a/src/app/remove-playlist/remove-playlist.component.html
+++ b/src/app/remove-playlist/remove-playlist.component.html
@@ -2,16 +2,34 @@
   <div class="container-fluid">
     <div class="row">
       <div class="colonne">
-        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
             <label for="select">Choisir une playlist</label>
-            <select class="custom-select form-control" id="select">
-              <option  *ngFor="let playlist of playlists"
-                      (value)="playlist.getName()">{{playlist.getName()}}</option>
+            <select class="custom-select form-control" id="select" [(ngModel)]="selectedOption">
+              <option  *ngFor="let playlist of playlists">
+                {{playlist.getName()}}
+              </option>
             </select>
+          <button class="btn supprimer" (click)="onSubmit()">Supprimer</button>
+          <button class="btn annuler" (click)="onAnnule()">Annuler</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--
+<div class="back">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="colonne">
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+          <label for="select">Choisir une playlist</label>
+          <select class="custom-select form-control" id="select" [(ngModel)]="selectedOption">
+            <option  *ngFor="let playlist of playlists"
+                     (value)="playlist.getName()">{{playlist.getName()}}</option>
+          </select>
           <button class="btn supprimer" type="submit">Supprimer</button>
           <button class="btn annuler" (click)="onAnnule()">Annuler</button>
         </form>
       </div>
     </div>
   </div>
-  </div>
+</div>
+-->
