--- a/src/app/leo-card/leo-card.component.html
+++ b/src/app/leo-card/leo-card.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="movie" class="card type1" style="width: 8rem;">
-  <img style="height: 10rem;" class="card-img-top img-responsive" [src]="getPath(path)" [alt]="title">
+  <img style="height: 10rem;" class="card-img-top img-responsive" [src]="getPath(movie.poster_path)" [alt]="movie.original_title">
   <div class="card-body">
-    <p class="card-title">{{title}}</p>
-    <p class="card-text">{{description}}</p>
+    <p class="card-title">{{movie.original_title}}</p>
+    <p class="card-text">{{pretty(movie.overview)}}</p>
   </div>
 </div>
 <!--
