remove router and fix menu bug

--- a/src/app/add-playlist/add-playlist.component.html
+++ b/src/app/add-playlist/add-playlist.component.html
@@ -6,8 +6,8 @@
           <label for="add">Nom de la playlist</label>
           <input class="form-control" type="text" id="add" name="name" ngModel>
           <button class="btn btn-primary ajouter" type="submit">Ajouter</button>
-          <button class="btn annuler" (click)="onAnnule()">Annuler</button>
         </form>
+        <button class="btn annuler" (click)="onClose()">Annuler</button>
       </div>
     </div>
   </div>
