--- a/src/app/handle-movies/handle-movies.component.html
+++ b/src/app/handle-movies/handle-movies.component.html
@@ -1,2 +1,2 @@
-<app-leo-card [movie]="movies[0]"></app-leo-card>
+<app-leo-card class="carte" [movie]="movie" *ngFor="let movie of movies"></app-leo-card>
 
