--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,4 @@
-<router-outlet></router-outlet>
-<!--
-<app-film id="12" type="petit" ></app-film>
--->
-<!--
-<h1>TMDB + Firebase</h1>
-<nav *ngIf="user">
-  <label>{{user.displayName}}</label>
-  <img [src]="user.photoURL" />
-  <button (click)="logout()">Déconnection</button>
-  {{user.uid}}
-</nav>
-<nav *ngIf="!user">
-  <button (click)="login()">Connection via Google</button>
-</nav>
-<hr/>
-<pre *ngIf="lists">
-  {{lists | async | json}}
-</pre>
-<hr/>
-<section *ngIf="movie">
-  <img [src]="getPath(movie.poster_path)" />
-  <pre>{{movie | json}}</pre>
-</section>
-<section *ngIf="!movie">
-  Pas encore de films à afficher...
-</section>
--->
+<app-header-menu></app-header-menu>
+<div class="menuHandler" (mouseenter)="mouseEnter()"></div>
+<app-playslist-menu (playlistStatut)="mouseOut($event)" *ngIf="playlistMenu"></app-playslist-menu>
+<app-handle-movies></app-handle-movies>
