--- a/src/app/header-menu/header-menu.component.html
+++ b/src/app/header-menu/header-menu.component.html
@@ -1,9 +1,8 @@
-<div class="menuHandler" (mouseenter)="mouseEnter()"></div>
 <div class="container-fluid">
   <div class="row">
 
     <div class="col-2 drop-container">
-      <button class="drop" (mouseenter)="handleClick()"><i class="fa fa-align-justify"></i><h1>Cyven</h1></button>
+      <button class="drop"><i class="fa fa-align-justify"></i><h1>Cyven</h1></button>
     </div>
 
     <div class="col-6 offset-1 form-group search">
@@ -23,4 +22,5 @@
   </div>
 
 </div>
-<app-handle-movies></app-handle-movies>
+
+<!-- <app-handle-movies></app-handle-movies> -->
