--- a/src/app/playslist-menu/playslist-menu.component.html
+++ b/src/app/playslist-menu/playslist-menu.component.html
@@ -1,12 +1,14 @@
+<!--
 <div class="head">
   <app-header-menu></app-header-menu>
 </div>
+-->
 <div class="container-fluid menu">
   <div class="row">
     <div class="colonne">
 
       <div class="row">
-        <button class="icon cyven" (click)="handleClick()"><i class="fa fa-align-justify logo"></i><h1>Cyven</h1></button>
+        <button class="icon cyven"><i class="fa fa-align-justify logo"></i><h1>Cyven</h1></button>
       </div>
 
       <div class="row">
@@ -33,13 +35,14 @@
       <div class="row">
         <button class="icon" (click)="handleDel()"><i class="fa fa-minus-circle"></i><h1>Supprimer une playlist</h1></button>
       </div>
+      <!-- @openClose = animation -->
       <div [@openClose]="add ? 'open' : 'closed'" class="open-close-container">
-        <app-add-playlist class="addPopUp" *ngIf="add"></app-add-playlist>
+        <app-add-playlist (addStatut)="addClose($event)" class="addPopUp" *ngIf="add"></app-add-playlist>
       </div>
-      <app-remove-playlist class="removePopUp" *ngIf="remove"></app-remove-playlist>
+      <app-remove-playlist (delStatut)="delClose($event)" class="removePopUp" *ngIf="remove"></app-remove-playlist>
     </div>
 
-    <div class="filtre" (mouseenter)="handleClick()">
+    <div class="filtre" (mouseenter)="mouseOut()">
     </div>
 
   </div>
