--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,8 +56,6 @@
 </section>
 
 <section>
-  <app-dropdown-list [playlists]=names>
+  <app-dropdown-list [playlists]=playlists>
   </app-dropdown-list>
 </section>
-
--->
