--- a/src/app/add-playlist/add-playlist.component.html
+++ b/src/app/add-playlist/add-playlist.component.html
@@ -1,4 +1,4 @@
-<div class="back">
+<div class="back" (mouseleave)="onClose()">
   <div class="container-fluid">
     <div class="row">
       <div class="colonne">
