--- a/src/app/remove-playlist/remove-playlist.component.html
+++ b/src/app/remove-playlist/remove-playlist.component.html
@@ -1,4 +1,4 @@
-<div class="back">
+<div class="back" (mouseleave)="onAnnule()">
   <div class="container-fluid">
     <div class="row">
       <div class="colonne">
