--- a/src/app/advanced-search/advanced-search.component.html
+++ b/src/app/advanced-search/advanced-search.component.html
@@ -1,43 +1,48 @@
 <mat-card>
-  <mat-form-field>
-    <div style="display: -webkit-box">
-      <p>Durée (en heure):</p>
-      <mat-slider></mat-slider>
+  <form ngClass="advanced-search" >
+    <div ngClass="advanced-search-1">
+
+      <div class ="advanced-search-time" >
+        <p>Durée (en heure):</p>
+        <mat-slider></mat-slider>
+      </div>
+
+      <!--genre-->
+      <div ngClass="advanced-search-genre" >
+        <p>Genre: </p>
+        <mat-select placeholder="" ngClass="advanced-search-genre-sel">
+          <mat-option *ngFor="let genre of genres" [value]="genre.value">
+            {{genre.viewValue}}
+          </mat-option>
+        </mat-select>
+      </div>
+
     </div>
 
-    <div style="display: flex">
-      <p>Genre:</p>
-      <mat-select placeholder="" style="border: solid">
-        <mat-option *ngFor="let genre of genres" [value]="genre.value">
-          {{genre.viewValue}}
+    <div ngClass="advanced-search-2">
+      <p>Langue: </p>
+      <mat-select placeholder="">
+        <mat-option *ngFor="let lang of langs" [value]="lang.value">
+          {{lang.viewValue}}
+        </mat-option>
+      </mat-select>
+
+      <p>Annee: </p>
+      <mat-select placeholder="Annee:">
+        <mat-option *ngFor="let an of ans" [value]="an.value">
+          {{an.viewValue}}
         </mat-option>
       </mat-select>
     </div>
 
 
-  <!--genre-->
-  <!--<mat-form-field>-->
 
-  <!--</mat-form-field>-->
-  <!--langue-->
-  <!--<mat-form-field>-->
-    <mat-select placeholder="Langue">
-      <mat-option *ngFor="let lang of langs" [value]="lang.value">
-        {{lang.viewValue}}
-      </mat-option>
-    </mat-select>
-  <!--</mat-form-field>-->
-  <!--annee-->
-  <!--<mat-form-field>-->
-    <mat-select placeholder="Annee:">
-      <mat-option *ngFor="let an of ans" [value]="an.value">
-        {{an.viewValue}}
-      </mat-option>
-    </mat-select>
-  <!--</mat-form-field>-->
-  <!--acteur -->
-  <!--<mat-form-field >-->
-    <input matInput placeholder="Acteur" value="Sushi">
-  </mat-form-field>
+    <div ngClass="advanced-search-3">
+      <p>Acteur: </p>
+      <input matInput placeholder="Acteur" value="Sushi">
+      <mat-button-toggle>Recherche</mat-button-toggle>
+    </div>
+
+  </form>
 </mat-card>
 
