--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,14 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 
-<!--<app-film id="12" type="petit" ></app-film>-->
+<!--<app-film [filmResult]="movie" type="petit" ></app-film>-->
+
+<!--<app-film [filmResult]="movie" type="medium" ></app-film>-->
+
+<!--<app-film [filmResult]="movie" type="big" ></app-film>-->
+
+<!--<app-film [filmResult]="movie" type="playlist" ></app-film>-->
+
 
 <!--<app-film id="11" type="medium"></app-film>-->
 
@@ -31,7 +38,7 @@
 
 <!--<app-film id="15" type="playlist"></app-film>-->
 
-<!--<app-film id="15" type="medium"></app-film>-->
+<!--<app-film id="16" type="medium"></app-film>-->
 
 <!--<app-bandeau-result-search></app-bandeau-result-search>-->
 
