handle-film + playslistService MAJ

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <div class="menuHandler" (mouseenter)="mouseEnter()"></div>
 <app-playslist-menu (playlistStatut)="mouseOut($event)" *ngIf="playlistMenu"></app-playslist-menu>
 <app-handle-movies></app-handle-movies>
+<!--<app-handle-film></app-handle-film>-->
