--- a/src/app/remove-playlist/remove-playlist.component.html
+++ b/src/app/remove-playlist/remove-playlist.component.html
@@ -1,14 +1,15 @@
-<div class="back" (mouseleave)="onAnnule()">
+<!--<div class="back" (mouseleave)="onAnnule()">-->
+<div class="back">
   <div class="container-fluid">
     <div class="row">
       <div class="colonne">
             <label for="select">Choisir une playlist</label>
-            <select class="custom-select form-control" id="select" [(ngModel)]="selectedOption">
-              <option  *ngFor="let playlist of playlists">
+            <select class="custom-select form-control" id="select" #listSelected>
+              <option  *ngFor="let playlist of playlists; let i = index" [value]="i">
                 {{playlist.getName()}}
               </option>
             </select>
-          <button class="btn supprimer" (click)="onSubmit()">Supprimer</button>
+          <button class="btn supprimer" (click)="onSubmit(listSelected.value)">Supprimer</button>
           <button class="btn annuler" (click)="onAnnule()">Annuler</button>
       </div>
     </div>
