--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,12 +23,15 @@
   <!--Pas encore de films à afficher...-->
 <!--</section>-->
 
-<app-film [filmResult]="movie" type="petit" ></app-film>
+<app-bandeau-playlist-film></app-bandeau-playlist-film>
+
+<!--<app-film [filmResult]="movie" type="petit" ></app-film>
 
 <app-film [filmResult]="movie" type="medium"></app-film>
 
 <app-film [filmResult]="movie" type="big"></app-film>
 
-<app-film [filmResult]="movie" type="playlist"></app-film>
+<app-film [filmResult]="movie" type="playlist"></app-film>-->
 
 <!--<app-film id="15" type="medium"></app-film>-->
+
