--- a/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
+++ b/src/app/bandeau-playlist-film/bandeau-playlist-film.component.html
@@ -18,15 +18,15 @@
 
     <div class="bandeauMoviesUp">
       <div *ngFor="let movie of moviesUp, let i = index">
-        <div class="movieUp" *ngIf="indexUp(i)">
+        <div class="movieUp2" *ngIf="indexUp(i)">
           <app-film [filmResult]="movie" type="petit"></app-film>
         </div>
       </div>
     </div>
 
-    <div class="bandeauMoviesBottom">
+    <div clear="left" class="bandeauMoviesBottom">
       <div *ngFor="let movie of moviesBottom, let i = index">
-        <div class="movieBottom" *ngIf="indexBottom(i)">
+        <div class="movieBottom2" *ngIf="indexBottom(i)">
           <app-film [filmResult]="movie" type="petit"></app-film>
         </div>
       </div>
@@ -42,14 +42,14 @@
 </div>
 <div class="right">
   <div class="bandeauMoviesUp">
-    <div class="movieUp"> okok</div>
-    <div class="movieUp"> okok2</div>
-    <div class="movieUp"> okok3</div>
+    <div class="movieUp1"> okok</div>
+    <div class="movieUp2"> okok2</div>
+    <div class="movieUp3"> okok3</div>
   </div>
 
   <div clear="left" class="bandeauMoviesBottom">
-    <div class="movieBottom">bottom1</div>
-    <div class="movieBottom">bottom2</div>
-    <div class="movieBottom">bottom3</div>
+    <div class="movieBottom1">bottom1</div>
+    <div class="movieBottom2">bottom2</div>
+    <div class="movieBottom3">bottom3</div>
   </div>
 </div>
